rspec-tools/tests/resources/invalid-rules/S200/scala/rule.adoc
== Resources
=== Documentation
=== Documentation
=== Articles & Blog Posts
=== Conference Presentations
=== Standards
